Added schedule fitness

--- a/lab3/schedule.yaml
+++ b/lab3/schedule.yaml
@@ -15,30 +15,30 @@ time_slots:
     time: 3
   - day: "2. Tuesday"
     time: 4
-  - day: "3. Wednesday"
-    time: 1
-  - day: "3. Wednesday"
-    time: 2
-  - day: "3. Wednesday"
-    time: 3
-  - day: "3. Wednesday"
-    time: 4
-  - day: "4. Thursday"
-    time: 1
-  - day: "4. Thursday"
-    time: 2
-  - day: "4. Thursday"
-    time: 3
-  - day: "4. Thursday"
-    time: 4
-  - day: "5. Friday"
-    time: 1
-  - day: "5. Friday"
-    time: 2
-  - day: "5. Friday"
-    time: 3
-  - day: "5. Friday"
-    time: 4
+  # - day: "3. Wednesday"
+  #   time: 1
+  # - day: "3. Wednesday"
+  #   time: 2
+  # - day: "3. Wednesday"
+  #   time: 3
+  # - day: "3. Wednesday"
+  #   time: 4
+  # - day: "4. Thursday"
+  #   time: 1
+  # - day: "4. Thursday"
+  #   time: 2
+  # - day: "4. Thursday"
+  #   time: 3
+  # - day: "4. Thursday"
+  #   time: 4
+  # - day: "5. Friday"
+  #   time: 1
+  # - day: "5. Friday"
+  #   time: 2
+  # - day: "5. Friday"
+  #   time: 3
+  # - day: "5. Friday"
+  #   time: 4
 
 subjects:
   - name: Linear Algebra
